manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-get-app
  name: http-get-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-get-app
