manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-get-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: k8ssampleapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-get-app
                port:   
                  number: 8080
